--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
